# labs

./: CONTRIBUTING.md  README.md
Academy/AI/2-ML-Model-Lifecycle/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yaml  load_data.py  noxfile.py  pyproject.toml
Academy/AI/2-ML-Model-Lifecycle/artifacts/: wine_rf.pkl
Academy/AI/2-ML-Model-Lifecycle/notebooks/: 01_explore_and_train.ipynb
Academy/AI/2-ML-Model-Lifecycle/src/: config.py  data.py  monitor.py  pipeline.py  pipeline_ml.py  pipeline_monitoring.py  retrain.py  serve.py  sweep.py  train.py
Academy/AI/2-ML-Model-Lifecycle/tests/: test_data.py  test_serve.py  test_train.py
Building-Castles/: DevSecOps-Kubernetes-Admission-Controller.md  DevSecOps-Kubernetes-Vulnerability-Monitoring.md  DevSecOps-Pipeline-Full-Implementation.md  DevSecOps-Pipeline-GitLab-SAST.md  DevSecOps-Pipeline-GitLab-Ultimate-DAST.md  DevSecOps-Pipeline-GitLab-Ultimate-Images.md  DevSecOps-Pipeline-GitLab-Ultimate-Policies.md  DevSecOps-Pipeline-GitLab-Ultimate-Requirements.md  DevSecOps-Pipeline-GitLab-Ultimate-SAST.md  DevSecOps-Pipeline-GitLab-Ultimate.md  DevSecOps-Pipeline-GitLab.md  DevSecOps-Pipeline-Nexus.md  DevSecOps-Pipeline-Requirements.md  DevSecOps-Pipeline-Simulate-Code-Problem.md  DevSecOps-Pipeline-SonarQube.md  DevSecOps_00_Requirements.md  DevSecOps_01_GitLab.md  DevSecOps_02_GitLab-SAST.md  DevSecOps_02_SonarQube.md  DevSecOps_03_Nexus.md  DevSecOps_03_SonarQube.md  DevSecOps_04_Nexus.Dockerfile  DevSecOps_04_Nexus.md  DevSecOps_04_Simulate-Code-Problem.md  DevSecOps_05_Simulate-Code-Problem.md  (+5 more)
(+211 files in other folders)
